--- a/index.html
+++ b/index.html
@@ -1,35 +1,48 @@
-<html>
-    <link rel="stylesheet"href="style.css"/>
-<body>
-<img src="C:\Users\user\Desktop">
-<h1>
-    ТЕЛЕФОН
-POCO M3
-</h1>
-<p>
-    Память 128 GB ,
-Хороший телефон для Школьника от фирмы Xiaomi.
-С ускорением игр и очисткой памяти.
-</p>
-<footer>
-<a href="https://learn.algoritmika.org/lesson?lesson=6175&level=7&task=18038"><p> Xiaomi</p>
-</a>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</footer>
-</body>
+<doctype html>
+    <html>
+        <head>
+            <meta name="description" content="Сайт о Крипе">
+            <meta name="keywords" content="Крип">
+            <meta name="author" content="MrCreep">
+            <meta charset="utf-8">
+            <link href="style.css" rel="stylesheet" type="text/css" />
+            <title>Творчество Крипа</title>
+        </head>
+        <header>
+        </header>
+        <body>
+            <p class="p1"><b>Великие творения Крипа</b></p>
+            <div id="Osnova">
+                <div id="Nav">
+                    <nav class="sticky">
+                        <ul class="ul1">
+                            <li class="li1"><a href="#I">О бо мне</a></li>  
+                            <li class="li1"><a href="#YouTube">О моём Ютубе</a></li>
+                            <li class="li1"><a href="#Site&Programm"> О сайтах и программах</a></li>
+                            <li class="li1"><a href="#MinecraftMods">Моды на майнкрафт</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div id="Osn_1">
+                <div id="Im">
+                    <h2>О бо мне</h2>
+                    <p id="I">Моё имя <i>Гордей</i>, а псевдони <i>Крип</i>. Я парень мне 13 лет(на момент написания), я родился в Пятигорске</p><img class="im1" src="https://trip-kavkaz.com/images/jatoms/tours/19663-kavkazskaya-mozaika/bead94d0506d400190d7c081be6779d9.jpeg"><p>11 сентября 2010 года, какоето время жил в Москве, а потом переехали к бабушке в Пятигорск. Моя жизнь была весела, Учился в 29 школе "Гармония".</p> <iframe class="vid1" width="1205" height="678" src="https://www.youtube.com/embed/XG6xwo2Mrj4" title="Театральная весна в 29 школе г.Пятигорска" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><p> Но при переходе в 6 класс мы переехали и я стал учиться в 30 школе, после переезда мне было тяжело освоиться, но я справился и нашёл себе друзей Настя(Кира) и Ваня.</p>
+                </div>
+                <div id="youtube">
+                    <h2>О Ютубе</h2>
+                    <p id="YouTube">Я на ютубе с 2017 года, мой первый канал назывался "Агент3077"(ссылку не найду), там мы снимали видео как играли с другом, после был канал "Super", там было 1 видео как мы скатывались с другом с горы на велосипеде, и наконецто я создаю канал "Super play" или как уже привычние "<a class="MyCh" href="https://www.youtube.com/@mrcreep8840">MrCreep</a>", к сожалению старые видео были утеряны</p>
+                </div>
+                <div id="site">
+                    <h2>О сайтах и программах</h2>
+                    <p id="Site&Programm">Я очень люблю програмирование и создание сайтов, к примеру этот сай я создал в одиночку, так же я знаю несколько языков программрования:html, css, pyton(junior), немного C#, C++, javaScript. Мой первый проработанный сайт https://mrcreep123.github.io/My/, да немного cringe</p>
+                </div>
+                <div id="mods">
+                    <h2>Моды на майнкрафт</h2>
+                    <p id="MinecraftMods">Моё имя <i>Гордей</i>, а псевдони <i>Крип</i>. </p>
+                </div>
+                <p><br><strong>Email <a href="#">terehovaa544@gmail.com</a></strong></p>
+                <small>Copyright &copy; 2025</small>
+            </div>
+        </body>
     </html>
